--- a/client/templates.jade
+++ b/client/templates.jade
@@ -22,9 +22,13 @@ head
 
 template(name='layout')
     +nav
-    +Template.dynamic template=cloud
-    +Template.dynamic template=sub_nav
-    +Template.dynamic template=main
+    .ui.container
+        +Template.dynamic template=slider
+        +Template.dynamic template=sub_nav
+        +Template.dynamic template=main
+    //     .twelve.wide.column
+    //     .four.wide.column
+    //         +emergency
     // +footer
 
 
