copy in twi doc structure, bikeloaner footer

--- a/client/templates.jade
+++ b/client/templates.jade
@@ -17,6 +17,9 @@ head
 
 
 
+template(name='not_found')
+    .ui.text.container
+        .ui.center.aligned.header Not Found
 
 
 
@@ -29,7 +32,7 @@ template(name='layout')
     //     .twelve.wide.column
     //     .four.wide.column
     //         +emergency
-    // +footer
+    +footer
 
 
 
