--- a/components/account/profile/view_profile.tpl.jade
+++ b/components/account/profile/view_profile.tpl.jade
@@ -12,18 +12,9 @@ with person
             if profile.position
                 .ui.header Position 
                 | #{profile.position}
-            if profile.company
-                .ui.header Company
-                | #{profile.company}
-            if profile.website
-                .ui.header Website 
-                a(href=profile.website target='_blank') #{profile.website}
             if profile.pro_bio
-                .ui.header What Working On / Interest in Social Change
+                .ui.header Bio
                 |#{profile.pro_bio}
-            if profile.needs
-                .ui.header Needs
-                |#{profile.needs}
             if isInRole 'admin'
                 .ui.horizontal.divider.header
                     i.red.configure.icon
