separate bikes and posts sections

--- a/client/footer.jade
+++ b/client/footer.jade
@@ -20,4 +20,4 @@ template(name='footer')
             .ui.divider
             .ui.center.aligned.header
                 i.copyright.icon
-                |C&O Canal Bike Loaner Program, 2018. All Rights Reserved
+                |C&O Canal Bike Loaner Program, 2018. All Rights Reserved.
