--- a/client/templates.jade
+++ b/client/templates.jade
@@ -24,7 +24,8 @@ template(name='not_found')
 
 
 template(name='layout')
-    .ui.container
+    +nav
+    .ui.padded.grid
         +Template.dynamic template=main
     +footer
 
@@ -32,3 +33,17 @@ template(name='layout')
 
 template(name="tag_result")
     .ui.basic.label #{name}
+
+
+
+template(name='nav')
+    .ui.large.attached.borderless.menu
+        a.ui.header.item(href='/') Bike Loaner
+        a.item(href='/posts') Posts
+        a.item(href='/bikes') Bikes
+        a.item(href='/library') Library
+        a.item(href='/faq') FAQ
+        a.item(href='/about') About
+        .right.menu
+            .item
+                +atNavButton
