--- a/components/docs/client/docs.jade
+++ b/components/docs/client/docs.jade
@@ -28,27 +28,23 @@ template(name='view_doc')
                                     | #{currentUser.name}
                                 else
                                     | Profile
-                            a#logout.ui.circular.basic.button(href='#' data-content='Sign Out') 
+                            a#logout.ui.circular.basic.icon.button(href='#' data-content='Sign Out') 
                                 i.sign.out.icon
                                 // | Sign Out
                         else
-                            a.ui.circular.basic.button(href='/sign-in' data-content='Sign In') 
+                            a.ui.circular.basic.icon.button(href='/sign-in' data-content='Sign In') 
                                 i.sign.in.icon
                                 // | Sign In
 
                     
             .centered.row
-                .twelve.wide.center.aligned.column
+                .ten.wide.center.aligned.column
                     h1.ui.center.aligned.header
                         if image_url
                             img.ui.tiny.inline.image(src=image_url)
                         else
                             if icon_class
                                 +icon96 name=icon_class classes='ui mini spaced image'
-                            // else
-                            //     +icon48 name='circle' classes='ui mini spaced image'
-                        if number
-                            |#{number}: 
                         if editing
                             | Editing '#{title}'
                         else
@@ -57,118 +53,23 @@ template(name='view_doc')
                     if can_edit
                         +toggle_editing_button
             .row
-                unless is_editing_something
-                    .four.wide.column
-                        if is_admin
-                            #user_add.ui.large.circular.basic.blue.icon.button
-                                +icon48 name='plus' classes='ui mini inline image'
-                                // | #{child_template}
-                        else if can_add
-                            #user_add.ui.large.circular.basic.icon.button
-                                +icon48 name='plus' classes='ui mini inline image'
-                                // | #{child_template}
-                        .ui.hidden.divider
-                        if theme_tags_facet
-                            +theme_facet
-                        if timestamp_facet
-                            +timestamp_facet
-                        if username_facet
-                            +username_facet
-                div(class=main_column_class)
+                .four.wide.column
+                    unless editing
+                        #user_add.ui.large.circular.basic.blue.icon.button
+                            +icon48 name='plus' classes='ui mini inline image'
+                        +tag_facet
+                        +timestamp_facet
+                .ten.wide.column
+                    +title
+                    +content
+                    +tags
                     if editing
-                        .twelve.wide.column
-                            each components
-                                if slug_exists
-                                    // .ui.segment(class=field_segment_class)
-                                    +Template.dynamic template=slug data=doc
-                                    if editing
-                                        +remove_field
-                                        .ui.hidden.divider
-                    else
-                        each components
-                            if slug_exists
-                                // .ui.segment(class=field_segment_class)
-                                div
-                                    +Template.dynamic template=slug data=doc
-                        if is_admin
-                            if child_count
-                                |#{child_count} children
+                        +delete_button
+                    unless editing
                         .ui.stackable.cards
                             each children
                                 +card_view
-                                // +Template.dynamic template=doc_child_view
-                if editing
-                    .six.wide.column
-                        +doc_editing_sidebar
             
-template(name='doc_editing_sidebar')
-    .ui.styled.fluid.accordion
-        h3.title
-            +icon48 name='rename' classes='ui mini inline image'
-            | Field Menu
-            i.dropdown.icon
-            each selected_fields
-                .ui.basic.label #{title}
-        .content
-            +field_menu
-
-        h3.title
-            +icon48 name='rhombus' classes='ui mini inline image'
-            | Facets
-            i.dropdown.icon
-        .content
-            +toggle_key key='theme_tags_facet' icon='hashtag' label='Theme Tags'
-            +toggle_key key='username_facet' icon='user' label='Authors'
-            +toggle_key key='timestamp_facet' icon='time' label='Created'
-
-        h3.title
-            +icon48 name='user' classes='ui mini inline image'
-            | Child Options
-            i.dropdown.icon
-            if can_add
-                .ui.basic.label User Add
-            if can_vote
-                .ui.basic.label User Vote
-                // .ui.basic.label Add: #{child_template}
-        .content
-            +toggle_key key='can_add' icon='add-subnode' label='Users Can Add'
-            +toggle_key key='can_vote' icon='elections' label='Vote'
-            // +toggle_key key='can_change_view_mode' icon='true-false' label='Choose View Mode'
-            +toggle_key key='can_bookmark' icon='bookmark' label='Bookmark'
-            .ui.segment
-                h5.ui.header 
-                    +icon48 name='add-subnode' classes='ui mini spaced image'
-                    |Child Fields
-                    if can_add
-                        |(user add)
-                    else
-                        |(admin only)
-                each components
-                    .select_child_field.ui.compact.small.button(class=child_field_class)
-                        +icon48 name=icon_class classes='ui mini spaced image'
-                        |#{title}
-    
-        h3.title 
-            +icon48 name='monarch' classes='ui mini spaced image'
-            |Admin
-            i.dropdown.icon
-        .content
-            #move_up.ui.basic.button
-                +icon48 name='up' classes='ui mini spaced image'
-                | Move Above Parent
-            +edit_author
-            +edit_parent_id
-        
-        h3.title 
-            +icon48 name='sports-mode' classes='ui mini spaced image'
-            | Actions
-            i.dropdown.icon
-        .content
-            if has_children
-                .ui.disabled.red.button Remove Children to Delete
-            else
-                #delete_doc.ui.red.button Delete
-            +published
             
 
              
