--- a/components/posts/client/posts.jade
+++ b/components/posts/client/posts.jade
@@ -1,80 +1,36 @@
 template(name='posts')
-    .ui.container
-        .ui.stackable.divided.grid
-            .twelve.wide.column
-                .ui.relaxed.divided.items
-                    each posts
-                        +post_item
-            .four.wide.column
-                +post_cloud
-                if isInRole 'admin'
-                    h2.ui.header 
-                        i.red.configure.icon
-                        |Admin
-                    #add_post.ui.compact.basic.fluid.button
-                        i.large.icons
-                            i.sticky.note.outline.icon
-                            i.green.plus.corner.icon
-                        |Add Post
+    .centered.row
+        h1.ui.center.aligned.header Posts
+    .row
+        .four.wide.column
+            +tag_facet
+            if isInRole 'admin'
+                .ui.hidden.divider
+                #add_post.ui.compact.basic.fluid.button
+                    i.green.plus.icon
+                    |Add Post
+        .twelve.wide.column
+            .ui.relaxed.divided.items
+                each posts
+                    +post_item
 
 
-template(name='my_posts')
-    .ui.fluid.card
-        .content
-            .ui.header My Posts
-            .ui.divided.list
-                each my_posts
-                    .item 
-                        a(href="/post/view/#{_id}") #{title}
 
-
-template(name='post')
+template(name='post_item')
     .ui.fluid.card
         .ui.centered.image
-            a(href="/post/view/#{_id}")
+            a(href="/post/#{_id}")
                 img(src="{{c.url image_id  height=300 crop='fill' gravity='face' }}")
         .content
-            h1.ui.header
-                a(href="/post/view/#{_id}") #{title}
+            .ui.header
+                a(href="/post/#{_id}") #{title}
             if publish_date
                 .meta
                     | Published #{publish_when}
-            .description
-                |{{nl2br body}}
+        .content
+            |!{content}
         .content
             each tags
-                .ui.compact.button.post_tag(class=tag_class) #{this}
-            if isInRole 'admin'
-                .edit_post.ui.primary.basic.right.floated.button
-                    i.pencil.icon
-                    |Edit Post    
-            
-            
-template(name='post_item')
-    .ui.item
-        a.image(href="/post/view/#{_id}")
-            img.ui.rounded.image(src="{{c.url image_id  width=175 height=175 crop='fill' gravity='face' }}")
-        .content
-            a.header(href="/post/view/#{_id}") #{title}
-            .meta
-                | Published #{publish_when}
-            .description
-                |{{nl2br body}}
-                a(href="/post/view/#{_id}") 
-                    |View More
-                    i.arrow.right.icon
-            .extra
-                i.tags.icon
-                each tags
-                    .ui.compact.label.post_tag(class=tag_class) #{this}
-            if isInRole 'admin'
-                .extra
-                    i.red.configure.large.icon
-                    if published
-                        .ui.green.basic.label Published
-                    else
-                        .ui.red.basic.label Unpublished                        
-                    if featured
-                        .ui.green.basic.label Featured
-                    else
-                        .ui.red.basic.label Unfeatured
+                .ui.compact.button.doc_tag(class=tag_class) #{this}
+            a.ui.right.floated.icon.basic.button(href="/post/#{_id}")
+                i.right.arrow.icon
