--- a/client/volunteer.jade
+++ b/client/volunteer.jade
@@ -1,6 +1,7 @@
-template(name='scheduling')
-    h1.ui.center.aligned.header Volunteer Management
-    #add_day.ui.basic.button Add Day
+template(name='volunteer')
+    h1.ui.center.aligned.header Volunteer
+    +named_content name='volunteer_blurb'
+    #add_shift.ui.basic.button Add Shift
     table.ui.definition.celled.selectable.table
         thead
             tr
@@ -8,7 +9,7 @@ template(name='scheduling')
                 th from 9:30 - 1:00
                 th from 1:00 - 4:30
         tbody
-            each volunteer_days
+            each shifts
                 tr
                     td #{formatted_date}
                     td 
@@ -49,3 +50,15 @@ template(name='scheduling')
                                 i.green.plus.icon
                                 | Join
     
+template(name='shift')
+    with shift
+        .ui.container.basic.segment
+            .ui.center.aligned.header Edit Volunteer Shift
+            .ui.form
+                .fields
+                    .field
+                        label Date
+                        .ui.left.icon.input
+                            i.calendar.icon
+                            input#date(type='date' value=date)
+                #delete.ui.basic.button Delete shift
