--- a/client/buttons.jade
+++ b/client/buttons.jade
@@ -6,86 +6,7 @@ template(name='voting')
         // |#{points}
 
 
-template(name='big_both_voter')
-    i.thumbs.up.link.huge.icon.vote_up(class=vote_up_button_class)
-    i.thumbs.down.link.huge.icon.vote_down(class=vote_down_button_class)
-    // |#{points}
 
-template(name='rating')
-    .ui.massive.heart.rating(data-rating=question_rating)
-
-
-template(name='session_edit_button')
-    if currentUser
-        unless is_editing
-            .edit_this.ui.basic.icon.button(title="Edit #{tags}" class=button_classes)
-                +icon48 name="edit" classes='ui mini inline image'
-                // i.icon
-                // |Edit
-        else
-            .ui.center.aligned.basic.segment
-                .save_doc.ui.basic.large.icon.button(class=button_classes)
-                    +icon48 name="checkmark" classes='ui mini inline image'
-                +delete_button
-
-                
-template(name='session_edit_icon')
-    if currentUser
-        unless is_editing
-            i.red.pencil.link.icon.edit_this(title=tags class=button_classes)
-        else
-            .save_doc.ui.green.button(class=button_classes)
-                // |Save
-template(name='edit_button')
-    if currentUser
-        unless editing
-            .edit_this.ui.basic.button(data-tooltip=tags)
-                i.icon
-                    +icon24 name='edit' classes='ui mini inline image'
-                |Edit
-        else
-            .save_doc.ui.green.button
-                i.icon
-                    +icon24 name='checkmark' classes='ui mini inline image'
-                |Save
-                
-template(name='edit_icon')
-    if currentUser
-        unless editing
-            i.edit_this.large.pencil.link.icon(data-tooltip=tags)
-        else
-            .save_doc.ui.icon.green.button
-                i.check.icon
-
-template(name='edit_link')
-    if currentUser
-        unless editing
-            a.edit_this Edit
-        else
-            .save_doc.ui.basic.large.button
-                +icon24 name='checked' classes='ui mini inline image'
-                |Save
-
-
-template(name='delete_button')
-    unless confirming
-        .delete.ui.basic.icon.button
-            i.red.remove.icon
-    else
-        .ui.basic.button.cancel Cancel
-        .ui.red.button.confirm Confirm Delete
-        
-template(name='delete_link')
-    unless confirming
-        a.delete Delete
-    else
-        a.cancel 
-            i.ban.icon
-            |Cancel
-        a.confirm 
-            i.red.trash.icon
-            |Confirm Delete
-        
 
 template(name='published')
     // .ui.dividing.header Visibility
@@ -133,14 +54,13 @@ template(name='bookmark_button')
         //     | Bookmark
         
         
-template(name='toggle_editing_button')
+template(name='edit_button')
     if can_edit
         if editing
-            #toggle_editing_off.ui.basic.button(data-position='bottom center' data-tooltip='Save')
-                +icon48 name='checkmark' classes='ui mini inline image'
+            #save.ui.basic.large.button(data-position='bottom center' data-tooltip='Save')
+                i.green.check.icon
+                | Save
         else
-            #toggle_editing_on.ui.basic.button(data-position="bottom center" data-tooltip='Edit')
-                +icon48 name='edit' classes='ui mini inline image'
-            // if tags
-            // else
-                // .ui.fluid.basic.disabled.button Add Tags to Save
+            #edit.ui.basic.large.button(data-position="bottom center" data-tooltip='Edit')
+                i.blue.pencil.icon
+                | Edit
