--- a/client/volunteer.jade
+++ b/client/volunteer.jade
@@ -1,64 +1,68 @@
 template(name='volunteer')
-    h1.ui.center.aligned.header Volunteer
-    +named_content name='volunteer_blurb'
-    #add_shift.ui.basic.button Add Shift
-    table.ui.definition.celled.selectable.table
-        thead
-            tr
-                th
-                th from 9:30 - 1:00
-                th from 1:00 - 4:30
-        tbody
-            each shifts
-                tr
-                    td #{formatted_date}
-                    td 
-                        .ui.list
-                            each slot_1_volunteers
-                                .item
-                                    img.ui.avatar.image(src="{{c.url volunteer.profile.image_id width=50 height=50 gravity='face' crop='fill'}}")
-                                    .content 
-                                        .header #{volunteer.profile.first_name} #{volunteer.profile.last_name}
-                                        .description
-                                            each volunteer.tags
-                                                .ui.basic.small.label #{this}
-                        if signed_up_for_first
-                            #leave_first_shift.ui.basic.button
+    .centered.row
+        h1.ui.header Volunteer
+    .row
+        +named_content name='volunteer_blurb'
+    .row
+        .four.wide.column
+            #add_shift.ui.basic.button 
+                i.plus.icon
+                |Add Shift
+            +tag_facet
+        .twelve.wide.column
+            .ui.cards
+                each shifts
+                    +shift_card
+                    
+                    
+                    
+template(name='shift_card')
+    .ui.card
+        .content
+            |shift
+            td #{formatted_date}
+            .ui.list
+                each volunteers
+                    .item
+                        img.ui.avatar.image(src="{{c.url volunteer.profile.image_id width=50 height=50 gravity='face' crop='fill'}}")
+                        .content 
+                            .header #{volunteer.profile.first_name} #{volunteer.profile.last_name}
+                            .description
+                                each volunteer.tags
+                                    .ui.basic.small.label #{this}
+                        if signed_up
+                            #leave_shift.ui.basic.button
                                 i.red.remove.icon
                                 | Leave
                         else
-                            #join_first_shift.ui.basic.button
+                            #join_shift.ui.basic.button
                                 i.green.plus.icon
                                 | Join
-                            
-                    td 
-                        .ui.list
-                            each slot_2_volunteers
-                                .item
-                                    img.ui.avatar.image(src="{{c.url volunteer.profile.image_id width=50 height=50 gravity='face' crop='fill'}}")
-                                    .content 
-                                        .header #{volunteer.profile.first_name} #{volunteer.profile.last_name}
-                                        .description
-                                            each volunteer.tags
-                                                .ui.basic.small.label #{this}
-                        if signed_up_for_second
-                            #leave_second_shift.ui.basic.button
-                                i.red.remove.icon
-                                | Leave
-                        else
-                            #join_second_shift.ui.basic.button
-                                i.green.plus.icon
-                                | Join
-    
+            a.ui.basic.icon.button(href="/shift/#{_id}")
+                i.right.arrow.icon
+        
 template(name='shift')
     with shift
-        .ui.container.basic.segment
-            .ui.center.aligned.header Edit Volunteer Shift
-            .ui.form
-                .fields
-                    .field
-                        label Date
-                        .ui.left.icon.input
-                            i.calendar.icon
-                            input#date(type='date' value=date)
-                #delete.ui.basic.button Delete shift
+        .centered.row
+            .three.wide.column
+                a.ui.basic.button(href='/volunteer')
+                    i.left.arrow.icon
+                    |Volunteer
+            .twelve.wide.center.aligned.column
+                h1.ui.header
+                    if editing
+                        | Edit 
+                    | Volunteer Shift
+        .row
+            .twelve.wide.column
+                +start_datetime
+                +end_datetime
+                +date
+                .make_first_shift.ui.button First Shift
+                .make_second_shift.ui.button Second Shift
+            
+            .four.wide.column
+                +edit_button
+                if editing    
+                    #delete.ui.basic.red.icon.button
+                        i.remove.icon
