--- a/client/templates.jade
+++ b/client/templates.jade
@@ -25,8 +25,7 @@ template(name='not_found')
 
 template(name='layout')
     +nav
-    .ui.padded.grid
-        +Template.dynamic template=main
+    +Template.dynamic template=main
     +footer
 
 
@@ -45,12 +44,25 @@ template(name='nav')
         a.item(href='/library') Library
         a.item(href='/faq') FAQ
         a.item(href='/about') About
+        a.item(href='/events') Events
         a.item(href='/donate') Donate
         a.icon.item(href='/people')
             i.users.icon
         .right.menu
-            .item
-                +atNavButton
+            if currentUser
+                a.item(href="/profile/#{currentUser._id}" class="{{isActiveRoute name='view_profile'}}" data-position="bottom center" data-content="Profile")
+                    if currentUser.profile.image_id
+                        img.ui.avatar.image(src="{{c.url currentUser.profile.image_id width=50 height=50 gravity='face' crop='fill'}}")
+                    else
+                        i.user.icon
+                    span.mobile.hidden    
+                        if currentUser.name
+                            | #{currentUser.name}
+                        else
+                            | #{currentUser.username}
+                a#logout.item(href="#") Sign Out
+            else
+                a.item(href="/sign-in") Sign In
                 
                 
 template(name='donate')
